--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   height:580px;
   font-family:標楷體;
   position:relative;
-
+  user-select: none; 
+  cursor: pointer;
 }
 .dc-color {
   width:400px;
@@ -73,6 +74,7 @@
 .dc-text {
   width:320px;
   height:55px;
+  word-wrap:break-word;
   overflow:hidden;
   font-size:16px;
   position:absolute;
