--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   position:absolute;
   top:445px;
   left:35px;  
+  font-weight: bold;
 }
 .dc-text {
   width:320px;
@@ -82,6 +83,7 @@
   left:40px;  
   border-style: solid;
   border-width: 0 0 1px 0;
+  font-weight: bold;
 }
 .dc-add {
   position:absolute;
