--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 		  <option value ="img/c4.png">白色</option>
 		  <option value ="img/c5.png">灰色</option>
 		  <option value ="img/c6.png">黑色</option>
+		  <option value ="img/c7.png">綠色</option>
 		</select>
 	  </div>
 	  <div class='d1-r-d'>
