--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <head>
 <meta charset="UTF-8" />
 <style>
+@font-face {
+  font-family: 'w3';
+  src: url('w3.TTC');
+  font-weight: normal;
+  font-style: normal;
+}
 #main {
   width:800px;
   background-color:#fff;
