--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   border-radius:10px;
   box-shadow:0 0 10px #222;
   overflow:hidden;
-  font-family:微軟正黑體;
+  font-family:'w3';
   position:relative;
 }
 .dc {
