--- a/index.html
+++ b/index.html
@@ -2,12 +2,6 @@
 <head>
 <meta charset="UTF-8" />
 <style>
-@font-face {
-  font-family: 'w3';
-  src: url('w3.TTC');
-  font-weight: normal;
-  font-style: normal;
-}
 #main {
   width:800px;
   background-color:#fff;
@@ -15,7 +9,7 @@
   border-radius:10px;
   box-shadow:0 0 10px #222;
   overflow:hidden;
-  font-family:'w3';
+  font-family:微軟正黑體;
   position:relative;
 }
 .dc {
