--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
 		  <option value ="img/attr/4.png">水</option>
 		  <option value ="img/attr/5.png">風</option>
 		  <option value ="img/attr/6.png">火</option>
+		  <option value ="img/attr/9.png">神</option>
 		</select>
 	  </div>
 	  <div class='d1-r-d'>
